--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     environment:
       - "UMASK_SET=022"
       - "WEBUI_PORT=8081"
+      - PUID=1000
+      - PGID=1000
   jackett:
     image: "linuxserver/jackett"
     container_name: jackett
@@ -24,6 +26,9 @@ services:
       - "~/docker/jackett/config:/config"
       - "~/docker/qbittorrent/downloads:/downloads"
       - "/etc/localtime:/etc/localtime:ro"
+    environment:
+      - PUID=1000
+      - PGID=1000
     ports:
       - "9117:9117"
   plex:
@@ -43,6 +48,8 @@ services:
       - TZ="America/Argentina/Buenos_Aires"
       - PLEX_CLAIM="claim-F4zaNoWZz7Q13DaYG2iX"
       - ADVERTISE_IP="http://192.168.0.15:32400/"
+      - PUID=1000
+      - PGID=1000
     hostname: "macosplex"
     domainname: local
     volumes:
@@ -62,6 +69,9 @@ services:
      - "~/docker/sonarr/config:/config"
      - "~/docker/sonarr/tvseries:/tv"
      - "~/docker/qbittorrent/downloads:/downloads"
+    environment:
+     - PUID=1000
+     - PGID=1000
     depends_on:
       - qbittorrent
       - jackett
