--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     volumes:
       - "~/docker/transmission/config:/config"
       - "~/docker/transmission/downloads:/downloads"
-      - "~/docker/transmission/watch:/downloads"
+      - "~/docker/transmission/watch:/watch"
       - "/etc/localtime:/etc/localtime:ro"
     environment:
       - PUID=1000
