-Added nginx reverse proxy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,14 @@
 version: '3'
 services:
+  nginx-proxy:
+    image: jwilder/nginx-proxy
+    container_name: nginx-proxy
+    ports:
+      - "80:80"
+    volumes:
+      - /var/run/docker.sock:/tmp/docker.sock:ro
+    environment:
+      - DEFAULT_HOST=foo.bar.com
   transmission:
     image: "linuxserver/transmission"
     container_name: transmission
@@ -12,6 +21,7 @@ services:
     environment:
       - PUID=1000
       - PGID=1000
+      - VIRTUAL_HOST="transmission.danteplexmediaserver.tk"
     ports:
       - "9091:9091"
       - "51413:51413"
@@ -27,6 +37,7 @@ services:
     environment:
       - PUID=1000
       - PGID=1000
+      - VIRTUAL_HOST="jackett.danteplexmediaserver.tk"
     ports:
       - "9117:9117"
   plex:
@@ -47,6 +58,7 @@ services:
       - PLEX_CLAIM="claim-hqSS1q3ss7yH4z1xnSaQ"
       - PUID=1000
       - PGID=1000
+      - VIRTUAL_HOST="plex.danteplexmediaserver.tk"
     hostname: "DantePlexMediaServer"
     network_mode: "host"
     volumes:
@@ -69,6 +81,7 @@ services:
     environment:
      - PUID=1000
      - PGID=1000
+     - VIRTUAL_HOST="sonarr.danteplexmediaserver.tk"
     depends_on:
       - transmission
       - jackett
