-added default host.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
     environment:
-      - DEFAULT_HOST=foo.bar.com
+      - DEFAULT_HOST=danteplexmediaserver.tk
   transmission:
     image: "linuxserver/transmission"
     container_name: transmission
