--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,8 @@ services:
       - "9091:9091"
       - "51413:51413"
       - "51413:51413/udp"
+    expose:
+      - "9091:9091"
   jackett:
     image: "linuxserver/jackett"
     container_name: jackett
