--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,6 +55,8 @@ services:
       - "32412:32412/udp"
       - "32413:32413/udp"
       - "32414:32414/udp"
+    expose:
+      - "32400"
     environment:
       - TZ="America/Argentina/Buenos_Aires"
       - PLEX_CLAIM="claim-hqSS1q3ss7yH4z1xnSaQ"
