--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,8 +39,8 @@ services:
       - "~/docker/transmission/watch:/watch"
       - "/etc/localtime:/etc/localtime:ro"
     environment:
-      - PUID=1000
-      - PGID=1000
+      - PUID=${PUID}
+      - PGID=${PGID}
       - VIRTUAL_HOST=transmission.${DOMAIN_URL}
       - VIRTUAL_PORT=9091
     ports:
@@ -57,8 +57,8 @@ services:
       - "~/docker/transmission/downloads:/downloads"
       - "/etc/localtime:/etc/localtime:ro"
     environment:
-      - PUID=1000
-      - PGID=1000
+      - PUID=${PUID}
+      - PGID=${PGID}
       - VIRTUAL_HOST=jackett.${DOMAIN_URL}
     ports:
       - "9117:9117"
@@ -78,8 +78,8 @@ services:
     environment:
       - TZ="America/Argentina/Buenos_Aires"
       - PLEX_CLAIM=${PLEX_CLAIM}
-      - PUID=1000
-      - PGID=1000
+      - PUID=${PUID}
+      - PGID=${PGID}
       - VIRTUAL_HOST=plex.${DOMAIN_URL}
       - VIRTUAL_PORT=32400
     hostname: "DantePlexMediaServer"
@@ -101,8 +101,8 @@ services:
      - "~/docker/sonarr/tvseries:/tv"
      - "~/docker/transmission/downloads:/downloads"
     environment:
-     - PUID=1000
-     - PGID=1000
+     - PUID=${PUID}
+     - PGID=${PGID}
      - VIRTUAL_HOST=sonarr.${DOMAIN_URL}
     depends_on:
       - transmission
@@ -121,9 +121,9 @@ services:
       - "~/docker/radarr/movies:/movies"
       - "~/docker/transmission/downloads:/downloads"
     environment:
-     - PUID=1000
-     - PGID=1000
-     - VIRTUAL_HOST=sonarr.${DOMAIN_URL}
+     - PUID=${PUID}
+     - PGID=${PGID}
+     - VIRTUAL_HOST=radarr.${DOMAIN_URL}
     depends_on:
       - transmission
       - jackett
