--- a/traefik.toml
+++ b/traefik.toml
@@ -11,7 +11,7 @@
 # Required
 # Default: "unix:///var/run/docker.sock"
 #
-# endpoint = "tcp://127.0.0.1:2375"
+endpoint = "/tmp/docker.sock:ro"
 
 # Default domain used.
 # Can be overridden by setting the "traefik.domain" label on a services.
