added manual subliminal.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,12 @@
 version: '3.3'
 services:
+  subliminal:
+    image: diaoulael/subliminal
+    container_name: subliminal
+    volumes:
+      - subliminal_cache:/usr/src/cache
+      - ~/docker/radarr/movies:/movies
+      - ~/docker/sonarr/tvseries:/tv
   netdata:
     image: titpetric/netdata
     container_name: netdata
