--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
     image: diaoulael/subliminal
     container_name: subliminal
     volumes:
-      - subliminal_cache:/usr/src/cache
-      - ~/docker/radarr/movies:/movies
-      - ~/docker/sonarr/tvseries:/tv
+      - "~/docker/subliminal/cache:/usr/src/cache"
+      - "~/docker/radarr/movies:/movies"
+      - "~/docker/sonarr/tvseries:/tv"
   netdata:
     image: titpetric/netdata
     container_name: netdata
