--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,12 @@
 version: '3.3'
 services:
+  subtitles-daemon:
+    image: dantebarba/subliminal-daemon
+    container_name: subtitles-daemon
+    volumes:
+      - ~/docker/radarr/movies:/movies
+      - ~/docker/sonarr/tvseries:/tv
+
   netdata:
     image: titpetric/netdata
     container_name: netdata
