--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,9 @@ services:
     image: janwer/webgrab
     container_name: webgrab
     volumes:
-      - ~/docker/epg/config
-    
+      - ~/docker/epg/config:/config
+      - ~/docker/epg/data:/data
+
 
   subtitles-daemon:
     image: dantebarba/subliminal-daemon
