--- a/transmission/settings.json
+++ b/transmission/settings.json
@@ -40,15 +40,15 @@
     "ratio-limit": 0.1000,
     "ratio-limit-enabled": true,
     "rename-partial-files": true,
-    "rpc-authentication-required": false,
+    "rpc-authentication-required": true,
     "rpc-bind-address": "0.0.0.0",
     "rpc-enabled": true,
     "rpc-password": "{1ddd3f1f6a71d655cde7767242a23a575b44c909n5YuRT.f",
     "rpc-port": 9091,
     "rpc-url": "/transmission/",
-    "rpc-username": "",
+    "rpc-username": "admin",
     "rpc-whitelist": "127.0.0.1",
-    "rpc-whitelist-enabled": false,
+    "rpc-whitelist-enabled": true,
     "scrape-paused-torrents-enabled": true,
     "script-torrent-done-enabled": false,
     "script-torrent-done-filename": "",
