--- a/transmission/settings.json
+++ b/transmission/settings.json
@@ -43,11 +43,11 @@
     "rpc-authentication-required": true,
     "rpc-bind-address": "0.0.0.0",
     "rpc-enabled": true,
-    "rpc-password": "{1ddd3f1f6a71d655cde7767242a23a575b44c909n5YuRT.f",
+    "rpc-password": "123456",
     "rpc-port": 9091,
     "rpc-url": "/transmission/",
     "rpc-username": "admin",
-    "rpc-whitelist": "127.0.0.1",
+    "rpc-whitelist": "127.0.0.1, transmission.danteplexmediaserver.ml",
     "rpc-whitelist-enabled": true,
     "scrape-paused-torrents-enabled": true,
     "script-torrent-done-enabled": false,
