password and no whitelist.

--- a/transmission/settings.json
+++ b/transmission/settings.json
@@ -43,12 +43,12 @@
     "rpc-authentication-required": true,
     "rpc-bind-address": "0.0.0.0",
     "rpc-enabled": true,
-    "rpc-password": "123456",
+    "rpc-password": "1A2B3C4E",
     "rpc-port": 9091,
     "rpc-url": "/transmission/",
     "rpc-username": "admin",
-    "rpc-whitelist": "127.0.0.1, transmission.danteplexmediaserver.ml",
-    "rpc-whitelist-enabled": true,
+    "rpc-whitelist": "*",
+    "rpc-whitelist-enabled": false,
     "scrape-paused-torrents-enabled": true,
     "script-torrent-done-enabled": false,
     "script-torrent-done-filename": "",
