--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,6 +76,8 @@ services:
       - "${STORAGE_LOCATION}/sonarr/tvseries:/tv"
       - "${STORAGE_LOCATION}/radarr/movies:/movies"
       - "${STORAGE_LOCATION}/plex:/transcode"
+      - "${STORAGE_LOCATION}/library:/library"
+
 
   sonarr:
     image: "linuxserver/sonarr"
