--- a/traefik.toml
+++ b/traefik.toml
@@ -32,5 +32,10 @@ email = "dantebarba@gmail.com"
 storage = "acme.json"
 entryPoint = "https"
 onHostRule = true
-[acme.httpChallenge]
-entryPoint = "http"
+[acme.dnsChallenge]
+  provider = "cloudflare"
+  delayBeforeCheck = 300
+[[acme.domains]]
+   main = "dantebarba.com.ar"
+[[acme.domains]]
+   main = "*.dantebarba.com.ar"
