--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - "traefik.enable=true"
       - "traefik.port=8080"
       - "traefik.backend=traefik"
-      - "traefik.basic.protocol=https"
+      - "traefik.basic.protocol=http"
       - "traefik.frontend.rule=Host:traefik.${DOMAIN_URL}"
 
   transmission:
