--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       - "traefik.enable=true"
       - "traefik.port=8080"
       - "traefik.backend=traefik"
+      - "traefik.basic.protocol=https,http"
       - "traefik.frontend.rule=Host:traefik.${DOMAIN_URL}"
 
   transmission:
