--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       - "traefik.enable=true"
       - "traefik.port=8080"
       - "traefik.backend=traefik"
-      - "traefik.protocol=https"
+      - "traefik.frontend.entryPoints=http,https"
       - "traefik.frontend.rule=Host:traefik.${DOMAIN_URL}"
 
   transmission:
